--- a/shelter/pages/pets/pets.css
+++ b/shelter/pages/pets/pets.css
@@ -152,17 +152,16 @@ body {
 
 .our-friends .our-friends-wrapper .our-friends-pets {
   margin-top: 4.5rem;
-  min-height: 93rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -ms-flex-line-pack: distribute;
-      align-content: space-around;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-column-gap: 4rem;
+          column-gap: 4rem;
 }
 
 .our-friends .our-friends-wrapper .our-friends-pets .pet {
@@ -184,6 +183,8 @@ body {
   background-color: #FAFAFA;
   border-radius: 0.9rem;
   padding-bottom: 3rem;
+  margin-top: 1.5rem;
+  margin-bottom: 1.5rem;
 }
 
 .our-friends .our-friends-wrapper .our-friends-pets .pet__name {
@@ -414,5 +415,124 @@ body {
 
 .footer .footer-wrapper .location__address-text {
   padding-left: 2rem;
+}
+
+@media (max-width: 768px) {
+  .our-friends-wrapper {
+    padding-top: 7rem;
+    padding-bottom: 7.6rem;
+  }
+  .our-friends-wrapper .our-friends-pets {
+    margin-top: 2.5rem;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-column-gap: 4rem;
+            column-gap: 4rem;
+    max-height: 139.5rem;
+    overflow: hidden;
+  }
+  .our-friends-wrapper .our-friends-pets .pet {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    width: 27rem;
+    height: 43.5rem;
+    background-color: #FAFAFA;
+    border-radius: 0.9rem;
+    padding-bottom: 3rem;
+    margin-top: 1.5rem;
+    margin-bottom: 1.5rem;
+  }
+  .our-friends-wrapper .our-friends-pets .pet__name {
+    font-family: Georgia;
+    font-weight: 400;
+    font-size: 2rem;
+    line-height: 2.3rem;
+    letter-spacing: 0.12rem;
+    color: #545454;
+  }
+  .our-friends-wrapper .our-friends-pets .pet__btn {
+    width: 18.7rem;
+    height: 5.2rem;
+    border: 2px solid #F1CDB3;
+    border-radius: 10rem;
+    padding-top: 1.3rem;
+    text-align: center;
+    color: #292929;
+    font-family: Georgia;
+    font-weight: 400;
+    font-size: 1.7rem;
+    line-height: 130%;
+    letter-spacing: 0.1rem;
+    text-decoration: none;
+  }
+  .our-friends-wrapper .our-friends-pets .pet__btn:hover {
+    background-color: #FDDCC4;
+    border-color: #FDDCC4;
+  }
+  .our-friends-wrapper .our-friends-pets .pet:hover {
+    cursor: pointer;
+    -webkit-box-shadow: 0px 2px 35px 14px rgba(13, 13, 13, 0.04);
+            box-shadow: 0px 2px 35px 14px rgba(13, 13, 13, 0.04);
+    background-color: #FFFFFF;
+  }
+  .our-friends-wrapper .navigation {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    margin-top: 2.5rem;
+    width: 34rem;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -ms-flex-item-align: center;
+        align-self: center;
+  }
+  .our-friends-wrapper .navigation .btn {
+    width: 52px;
+    height: 52px;
+    border: 2px solid #F1CDB3;
+    border-radius: 100%;
+    background: none;
+    outline: none;
+    color: #292929;
+    font-family: Georgia;
+    font-weight: 400;
+    font-size: 2rem;
+    line-height: 115%;
+    letter-spacing: 0.12rem;
+  }
+  .our-friends-wrapper .navigation .btn:hover {
+    cursor: pointer;
+    background-color: #FDDCC4;
+    border: 2px solid #FDDCC4;
+  }
+  .our-friends-wrapper .navigation .btn:disabled {
+    background: none;
+    border: 2px solid #CDCDCD;
+    color: #CDCDCD;
+    cursor: auto;
+  }
+  .our-friends-wrapper .navigation .btn-active {
+    cursor: pointer;
+    background-color: #F1CDB3;
+    border: 2px solid #F1CDB3;
+  }
 }
 /*# sourceMappingURL=pets.css.map */
