--- a/shelter/pages/main/main.scss
+++ b/shelter/pages/main/main.scss
@@ -13,7 +13,10 @@ $color-dark-2xl:#444444;
 $color-dark-3xl:#292929;
 
 
-
+// body {
+// 	overflow-x: hidden;
+// 	// width: 100vw;
+// }
 
 :root {
 	font-size: 10px;
@@ -97,6 +100,7 @@ $color-dark-3xl:#292929;
 }
 
 .header {
+	// z-index: 5;
 	width: 100%;
 	position: absolute;
 	top: 6rem;
@@ -194,7 +198,7 @@ $color-dark-3xl:#292929;
 		padding-top: 18rem;
 		background: url(../../assets/images/noise_transparent@2x.png), 
 		radial-gradient(100% 215.42% at 0% 0%, #5B483A 0%, #262425 100%), #211F20;
-
+    // z-index: 1;
 		.hero-wrapper {
 			@include wrapper;
 
@@ -512,6 +516,10 @@ $color-dark-3xl:#292929;
 						span {
 							padding-left: 1.5rem;
 						}
+					}
+
+					&__card:hover {
+						background-color: $color-primary-light;
 					}
 		
 					&__notes {
@@ -842,27 +850,113 @@ $color-dark-3xl:#292929;
 
 
 @media (max-width: 767px) {
+	body {
+		overflow-x: hidden;
+
+		.dark {
+			width: 100%;
+			height: 100%;
+			position: fixed;
+			background: rgba(41, 41, 41, 0.6);
+			z-index: 2;
+		}
+	}
 
 	.header {
 	
-		.header-wrapper {		
-			padding-left: 3.13%;
-			padding-right: 53px;
 	
-				.burger-menu {
-					display: block;
-					align-self: center;
-					padding-top: 2px;
-				}
-			 
-			  .menu {
-				  display: none;
-			
+		.header-wrapper {
+				
+			padding-left: 0;
+			padding-right: 53px;
+			// !new
+			justify-content: flex-end;
+
+      .logo {
+				margin-right: 41px;
+				z-index: 5;
 			}
+	
+			.burger-menu {
+				display: block;
+				align-self: center;
+				padding-top: 2px;
+				z-index: 5;
+			}
+
+			.burger-menu-show {
+				transition: 0.5s ease-in-out;
+				transform: rotate(-90deg);
+			}
+
+			.burger-menu-hide {
+				transition: 0.5s ease-in-out;
+				transform: rotate(0deg);
+			}
+			
+			.menu {
+				display: none;		
+			}
+			
+			.menu-show {
+				position: fixed;
+				width: 320px;
+				height: 823px;
+				background-color: $color-dark-3xl;
+				top: -30px;
+				right: 0;
+				animation: burger-show 1s normal;
+				z-index: 4;
+				display: flex;
+				flex-direction: column;
+				justify-content: center;
+
+				.list {
+					height: 327px;
+					flex-direction: column;
+					justify-content: space-between;
+					align-items: center;
+					font-size: 3.2rem;
+				}
+				
+			}
+
+			.menu-hide {
+				position: fixed;
+				width: 320px;
+				height: 823px;
+				background-color: $color-dark-3xl;
+				top: -30px;
+				right: -320px;
+				animation: burger-hide 1s normal;
+				z-index: 4;
+				display: flex;
+				flex-direction: column;
+				justify-content: center;
+
+				.list {
+					height: 327px;
+					flex-direction: column;
+					justify-content: space-between;
+					align-items: center;
+					font-size: 3.2rem;
+				}
+				
+			}
+
 				
 		}
 	
 	}
+
+	// .header-mobile {
+	// 	width: 320px;
+	// 	height: 823px;
+	// 	position: absolute;
+	// 	top: 0;
+	// 	right: 0;
+	// 	background-color: $color-dark-3xl;
+	// }
 	
 	
 	.main {
@@ -1137,6 +1231,32 @@ $color-dark-3xl:#292929;
 		}
 	}
 }
+
+@keyframes burger-show {
+	from {
+		right: -320px;
+	}
+	to {
+		right: 0px;
+	}
+}
+
+@keyframes burger-hide {
+	from {
+		right: 0px;
+	}
+	to {
+		right: -320px;
+	}
+}
+
+// .dark {
+// 	width: 100%;
+// 	height: 100%;
+// 	position: fixed;
+// 	background: rgba(41, 41, 41, 0.6);
+// 	z-index: 2;
+// }
 
 
 
