--- a/shelter/pages/main/main.scss
+++ b/shelter/pages/main/main.scss
@@ -15,7 +15,7 @@ $color-dark-3xl:#292929;
 
 // body {
 // 	overflow-x: hidden;
-// 	// width: 100vw;
+// width: 100vw;
 // }
 
 :root {
@@ -317,6 +317,7 @@ $color-dark-3xl:#292929;
 						border: 2px solid $color-primary;
 						border-radius: 100%;
 						background: none;
+						outline: none;
 					}
 		
 					.btn:hover {
@@ -344,6 +345,30 @@ $color-dark-3xl:#292929;
 					display: flex;
 					justify-content: space-between;
 					width: 99rem;
+					height: 43.5rem;
+					overflow: hidden;
+					position: relative;
+
+					.slide-pets{
+            display: none;
+						width: 100%;
+						height: 100%;
+						position: relative;
+						// animation: 1s ease-in-out;
+					}
+
+					.next {
+						display: flex;
+					  justify-content: space-between;
+						position: absolute;
+						top: 0;
+						width: 100%;
+					}
+
+					.active {
+						display: flex;
+					  justify-content: space-between;
+					}
 		
 					.pet {
 						display: flex;
@@ -730,18 +755,28 @@ $color-dark-3xl:#292929;
 		
 	
 				.our-friends-content {
-								
-					.our-friends-pets {
-						display: flex;
-						justify-content: center;
-						width: 81.92%;
-						column-gap: 4rem;
 
-						.pet_woody {
-							display: none;
-						}
-			
-					}		
+					.our-friends-slider {
+						width: 70.8rem;
+						// margin-left: auto;
+						// margin-right: auto;
+						align-self: center;
+
+							
+						.our-friends-pets {
+							display: flex;
+							justify-content: space-between;
+							width: 58rem;
+							// column-gap: 4rem;
+
+							.pet_woody {
+								display: none;
+							}
+				
+						}	
+
+					} 
+								
 				}
 			}		
 		}
@@ -859,6 +894,7 @@ $color-dark-3xl:#292929;
 			position: fixed;
 			background: rgba(41, 41, 41, 0.6);
 			z-index: 2;
+			
 		}
 	}
 
@@ -1061,18 +1097,25 @@ $color-dark-3xl:#292929;
 					.our-friends-slider {
 						position: relative;				
 						margin-top: 4.2rem;
-						height: 50.7rem;					
+						height: 50.7rem;
+						width: 27rem;
+						
+						.our-friends-pets {
+							// margin-right: auto;
+							// margin-left: auto;
+							width: 27rem;
+						}
 
 						.btn-left {
 							position: absolute;
 							bottom: 0;
-							left: 21.25%;
+							left: 15.93%;
 						}
 
 						.btn-right {
 							position: absolute;
 							bottom: 0;
-							right: 21.25%;
+							right: 15.93%;
 						}
 										
 					}
@@ -1258,5 +1301,45 @@ $color-dark-3xl:#292929;
 // 	z-index: 2;
 // }
 
+
+.to-left {
+	animation: 1s ease-in-out;
+  animation-name: left;
+}
+
+.to-right {
+	animation: 1s ease-in-out;
+  animation-name: right;
+  animation-direction: reverse;
+}
+
+.from-left {
+	animation: 1s ease-in-out;
+  animation-name: left;
+  animation-direction: reverse;
+}
+
+.from-right {
+	animation: 1s ease-in-out;
+  animation-name: right;
+}
+
+@keyframes left {
+  from {
+    left: 0;
+  }
+  to {
+    left: -100%;
+  }
+}
+
+@keyframes right {
+  from {
+    left: 100%;
+  }
+  to {
+    left: 0;
+  }
+}
 
 
