--- a/shelter/pages/main/main.scss
+++ b/shelter/pages/main/main.scss
@@ -652,6 +652,150 @@ $color-dark-3xl:#292929;
 }
 
 
+// modal
+
+.modal {
+	left: 0;
+	top: 0;
+	position: fixed;
+	z-index: 1000;
+	background-color: rgba(41, 41, 41, 0.6);
+	width: 100%;
+	height: 100%;
+	overflow: hidden;
+
+	.modal-content {
+		top: 50%;
+		transform: translateY(-50%);
+		width: 900px;
+		// height: 500px;
+		position: relative;
+		background-color: $color-light-s;
+		margin-left: auto;
+		margin-right: auto;
+		border-radius: 10px;
+
+		.btn-close {
+			position: absolute;
+			top: -52px;
+			right: -42px;
+			width: 52px;
+			height: 52px;
+			border: 2px solid $color-primary;
+			border-radius: 100%;
+			background: none;
+			outline: none;
+			
+		}
+
+		.btn-close:hover {
+			cursor: pointer;
+			background-color: $color-primary-light;
+			border-color: $color-primary-light;
+		}
+
+		.modal-card {
+			display: flex;
+			// height: 500px;
+
+			.modal-image {
+				width: 500px;
+				height: 500px;
+				border-radius: 10px;
+				overflow: hidden;
+				
+				img {
+					width: 100%;
+				}
+			}
+	
+	
+			.modal-text {
+				margin-left: 29px;
+				// padding-right: 20px;
+				padding-top: 50px;
+				font-family: Georgia;
+				width: 351px;
+	
+				.modal-name {
+					font-size: 35px;
+					line-height: 130%;
+					letter-spacing: 2.2px;
+				}
+	
+				.modal-type {
+					font-size: 20px;
+					line-height: 115%;
+					margin-top: 10px;
+					letter-spacing: 1.2px;
+				}
+	
+				.modal-description {
+					font-size: 15px;
+					line-height: 117%;
+					margin-top: 40px;
+					font-weight: 300;
+					letter-spacing: 0.9px;
+				}
+	
+				.modal-list {
+					font-size: 15px;
+					line-height: 120%;
+					margin-top: 40px;
+					list-style-type: none;
+					letter-spacing: 0.9px;
+	
+					li {
+					
+						margin-bottom: 10px;
+					}
+
+					// li::marker {
+					// 	margin-right: 10px;
+					// }
+
+					li:before {
+						color: $color-primary;
+						content: '•'; 
+						padding-right: 8px; 
+					 }
+	
+					li span {
+						color: black;
+					}
+				}
+			}
+
+		}	
+		
+		
+	} 
+}
+
+.modal:hover .btn-close {
+	background-color: $color-primary-light;
+	border-color: $color-primary-light;   
+}
+
+.modal-content:hover .btn-close {
+	background: none;
+	border-color: $color-primary;
+}
+
+
+
+
+
+.show{
+  display: block;
+}
+
+.hide {
+  display: none;
+}
+
+
+
 @media (max-width: 1279px) {
 
 	.header {
@@ -881,6 +1025,113 @@ $color-dark-3xl:#292929;
 			}
 		}
 	}
+
+  .modal {
+		// left: 0;
+		// top: 0;
+		// position: fixed;
+		// z-index: 1000;
+		// background-color: rgba(41, 41, 41, 0.6);
+		// width: 100%;
+		// height: 100%;
+		// overflow: hidden;
+	
+		.modal-content {
+			// top: 50%;
+			// transform: translateY(-50%);
+			width: 630px;
+			// min-height: 350px;
+			// position: relative;
+			// background-color: $color-light-s;
+			// margin-left: auto;
+			// margin-right: auto;
+			border-radius: 8px;
+	
+			// .btn-close {
+			// 	position: absolute;
+			// 	top: -52px;
+			// 	right: -52px;
+			// 	width: 52px;
+			// 	height: 52px;
+			// 	border: 2px solid $color-primary;
+			// 	border-radius: 100%;
+			// 	background: none;
+			// 	outline: none;
+				
+			// }
+	
+			// .btn-close:hover {
+			// 	cursor: pointer;
+			// 	background-color: $color-primary-light;
+			// 	border-color: $color-primary-light;
+			// }
+	
+			.modal-card {
+				display: flex;
+				// height: 350px;
+	
+				.modal-image {
+					width: 350px;
+					height: 350px;
+					border-radius: 8px;
+					// overflow: hidden;
+					
+					// img {
+					// 	width: 100%;
+					// }
+				}
+		
+		
+				.modal-text {
+				margin-left: 11px;
+					
+					padding-top: 10px;
+					padding-bottom: 10px;
+					// font-family: Georgia;
+					width: 262px;
+		
+					// .modal-name {
+					// 	font-size: 35px;
+					// 	line-height: 130%;
+					// }
+		
+					// .modal-type {
+					// 	font-size: 20px;
+					// 	line-height: 115%;
+					// 	margin-top: 10px;
+					// }
+		
+					.modal-description {
+						font-size: 13px;
+						line-height: 110%;
+						margin-top: 20px;
+						letter-spacing: 0.8px;
+					// 	font-weight: 300;
+					}
+		
+					.modal-list {
+					// 	font-size: 15px;
+					// 	line-height: 110%;
+						margin-top: 20px;
+					// 	list-style-position: inside;
+		
+						li {
+					// 		color: $color-primary;
+							margin-bottom: 5px;
+						}
+		
+					// 	li span {
+					// 		color: black;
+					// 	}
+					}
+				}
+	
+			}		
+		} 
+	} 
+
+
+
 }
 
 
@@ -1273,6 +1524,119 @@ $color-dark-3xl:#292929;
 			}
 		}
 	}
+
+	.modal {
+		// left: 0;
+		// top: 0;
+		// position: fixed;
+		// z-index: 1000;
+		// background-color: rgba(41, 41, 41, 0.6);
+		// width: 100%;
+		// height: 100%;
+		// overflow: hidden;
+	
+		.modal-content {
+			// top: 50%;
+			// transform: translateY(-50%);
+			width: 240px;
+			// min-height: 350px;
+			// position: relative;
+			// background-color: $color-light-s;
+			// margin-left: auto;
+			// margin-right: auto;
+			border-radius: 8px;
+	
+			.btn-close {
+			// 	position: absolute;
+			// 	top: -52px;s
+				right: -30px;
+			// 	width: 52px;
+			// 	height: 52px;
+			// 	border: 2px solid $color-primary;
+			// 	border-radius: 100%;
+			// 	background: none;
+			// 	outline: none;
+				
+			}
+	
+			// .btn-close:hover {
+			// 	cursor: pointer;
+			// 	background-color: $color-primary-light;
+			// 	border-color: $color-primary-light;
+			// }
+	
+			.modal-card {
+				display: flex;
+				// height: 350px;
+	
+				.modal-image {
+					display: none
+					// width: 350px;
+					// height: 350px;
+					// border-radius: 8px;
+					// overflow: hidden;
+					
+					// img {
+					// 	width: 100%;
+					// }
+				}
+		
+		
+				.modal-text {
+					padding-left: 10px;
+					padding-right: 10px;
+					padding-top: 10px;
+					padding-bottom: 10px;
+					margin-left: 0;
+					// font-family: Georgia;
+					width: 100%;
+		
+					.modal-name {
+						text-align: center;
+					// 	font-size: 35px;
+					// 	line-height: 130%;
+					}
+		
+					.modal-type {
+						text-align: center;
+					// 	font-size: 20px;
+					// 	line-height: 115%;
+					// 	margin-top: 10px;
+					}
+		
+					.modal-description {
+					// 	font-size: 15px;
+					// 	line-height: 110%;
+						margin-top: 20px;
+						text-align: justify;
+						letter-spacing: 0.7px;
+					// 	font-weight: 300;
+					}
+		
+					.modal-list {
+					// 	font-size: 15px;
+					// 	line-height: 110%;
+						margin-top: 24px;
+					// 	list-style-position: inside;
+		
+						li {
+					// 		color: $color-primary;
+							margin-bottom: 5px;
+						}
+
+						li:last-child {
+							margin-bottom: 0;
+						}
+		
+					// 	li span {
+					// 		color: black;
+					// 	}
+					}
+				}
+	
+			}		
+		} 
+	} 
 }
 
 @keyframes burger-show {
@@ -1341,5 +1705,6 @@ $color-dark-3xl:#292929;
     left: 0;
   }
 }
+
 
 
